# desenv-multipl-i

./: .gitignore  README.md
aula01/: README.md  abstracao.py  encapsulamento.py  heranca.py  polimorfismo.py
aula02/: README.md  main.py
aula03/: README.md  main.py
aula03/config/: database.py
aula03/model/: models.py
aula04/: README.md  main.py  requirements.txt
aula04/config/: database.py
aula04/repository/: user_repository.py
aula04/service/: user_service.py
aula05/: README.md  main.py  rename.py
aula05/config/: database.py
aula05/service/: user_service.py
aula06/: .env  database.db  main.py  pyproject.toml  requirements.txt
aula06/controller/: user_controller.py
aula06/domain/dto/: dtos.py
aula06/repository/: user_repository.py
aula06/test/: test_user_controller.py
aula07/: .env  Users API.postman_collection.json  main.py
aula07/config/: log_config.py
aula07/service/: user_service.py
aula07/test/: test_user_service.py
aula08/: README.md  database.db  docker-compose.yml  main.py
aula08/config/: log_config.py
aula08/controller/: auth_controller.py
aula08/messaging/: rabbitmq_consumer.py  rabbitmq_producer.py
aula08/service/: auth_service.py  user_service.py
aula09/: .env  README.md  docker-compose.yml  main.py  requirements.txt  user-api.DEV.postman_environment.json
aula09/.docker/: Dockerfile.prod
aula09/config/: database.py  settings.py
aula09/controller/: user_controller.py
aula09/logs/: myapp.log.2024-04-30  myapp.log.2024-05-07  myapp.log.2024-05-21
aula09/messaging/: rabbitmq_consumer.py  (+1 more)
(+8 files in other folders)
