[tool.poetry]
name = "aula06"
version = "0.1.0"
description = ""
authors = ["Luan Fernandes <souluanf@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
httpx = "^0.27.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.1"
fastapi = "^0.111.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=./ --cov-report=html"
testpaths = [
    "test"
]
